--- a/source/_posts/20170711--Hash-冲突处理.md
+++ b/source/_posts/20170711--Hash-冲突处理.md
@@ -68,3 +68,17 @@ tags:
 
 ## 总结
 这次的Hash冲突处理总结，是源于Java HashMap 源码的阅读，其就是采用了链地址的方式处理的冲突。
+
+## 参考
+*《数据结构（C语言版）》 严蔚敏*
+*一篇不错的博客 http://blog.csdn.net/qq_27093465/article/details/52269862*
+
+## 附：《数据结构《C语言版）》 Hash表部分截图
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-1.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-2.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-3.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-4.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-5.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-6.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-7.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-8.png)
