--- a/source/_posts/20170711--Hash-冲突处理.md
+++ b/source/_posts/20170711--Hash-冲突处理.md
@@ -14,8 +14,8 @@ tags:
 ## 什么是哈希表
 
 > *严蔚敏 《数据结构（C语言版）》 截图*
-> 
->![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-0.png)
+>
+>![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-0.png?x-oss-process=image/resize,m_lfit,w_800,limit_0/auto-orient,0/quality,q_50)
 
 哈希表就是依据 **关键字可以根据一定的算法（哈希函数）映射到表中的特定位置** 的思想建立的表。
 因此哈希表最大的特点就是可以根据`f(K)`函数得到其在数组中的索引。
@@ -23,6 +23,8 @@ tags:
 ## Hash 冲突
 在计算hash地址的过程中会出现**对于不同的关键字出现相同的哈希地址**的情况，即`key1 ≠ key2`，但是`f(key1) = f(key2)`，这种情况就是**Hash 冲突**。具有相同关键字的`key1`和`key2`称之为**同义词**。
 通过优化哈希函数可以减少这种冲突的情况（如：均衡哈希函数），但是在通用条件下，考虑到于表格的长度有限及关键值（数据）的无限，这种冲突是不可避免的，所以就需要处理冲突。
+
+<!-- more --> 
 
 ## 冲突处理
 冲突处理分为以下四种方式：
@@ -36,31 +38,31 @@ tags:
 
 ### 开放地址
 开放地址法和再哈希法处理冲突的基本原则（**除链地址方法除外**）就是**出现冲突后按照一定算法查找一个空位置存放**。公式：
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/open-address.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/open-address.png?x-oss-process=image/resize,m_lfit,h_20,limit_0/auto-orient,0/quality,q_50)
 `Hi`为计算出的地址，`H(key)`为哈希函数，`di`为增量。其中`di`的三种获取方式既是上面提到的开放地址法的三种分类（线性探测再散列、二次探测再散列、伪随机探测再散列）。
 
 #### 线性探索再散列
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/%E7%BA%BF%E6%80%A7%E6%8E%A2%E7%B4%A2.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/%E7%BA%BF%E6%80%A7%E6%8E%A2%E7%B4%A2.png?x-oss-process=image/resize,m_lfit,h_20,limit_0/auto-orient,0/quality,q_50)
 即依次向后查找。
 #### 二次探索再散列
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/%E4%BA%8C%E6%AC%A1%E6%8E%A2%E7%B4%A2.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/%E4%BA%8C%E6%AC%A1%E6%8E%A2%E7%B4%A2.png?x-oss-process=image/resize,m_lfit,h_20,limit_0/auto-orient,0/quality,q_50)
 即依次向前后查找，增量为1、2、3的二次方。
 #### 伪随机探测再散列
 伪随机，顾名思义就是随机产生一个增量位移。
 #### 例子
 贴一个《数据结构》中的列子
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/example.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/example.png?x-oss-process=image/resize,m_lfit,w_800,limit_0/auto-orient,0/quality,q_50)
 
 ### 再哈希法
 再哈希法，就是出现冲突后采用其他的哈希函数计算，直到不再冲突为止。
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/rehash.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/rehash.png?x-oss-process=image/resize,m_lfit,h_20,limit_0/auto-orient,0/quality,q_50)
 `RHi`为不同的哈希函数。
 
 ### 链地址法
 链接地址法不同与前两种方法，他是在出现冲突的地方存储一个链表，所有的同义词记录都存在其中。形象点说就行像是在出现冲突的地方直接把后续的值摞上去。
 
 #### 例子
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/link.png)
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/link.png?x-oss-process=image/resize,m_lfit,w_800,limit_0/auto-orient,0/quality,q_50)
 
 ### 建立公共溢出区
 大概的意思就是对冲突的关键字新建数组进行存储（不是很明确）。
@@ -70,15 +72,5 @@ tags:
 这次的Hash冲突处理总结，是源于Java HashMap 源码的阅读，其就是采用了链地址的方式处理的冲突。
 
 ## 参考
-*《数据结构（C语言版）》 严蔚敏*
+*《数据结构（C语言版）》 严蔚敏 ---- Hash表（251）*
 *一篇不错的博客 http://blog.csdn.net/qq_27093465/article/details/52269862*
-
-## 附：《数据结构《C语言版）》 Hash表部分截图
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-1.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-2.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-3.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-4.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-5.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-6.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-7.png)
-![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/hash-8.png)
