--- a/source/_posts/20170711--Hash-冲突处理.md
+++ b/source/_posts/20170711--Hash-冲突处理.md
@@ -37,7 +37,7 @@ tags:
 4. 建立公共溢出区
 
 ### 开放地址
-开放地址法和再哈希法处理冲突的基本原则（**除链地址方法除外**）就是**出现冲突后按照一定算法查找一个空位置存放**。公式：
+开放地址法处理冲突的基本原则就是**出现冲突后按照一定算法查找一个空位置存放**。公式：
 ![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/20170711--Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/open-address.png?x-oss-process=image/resize,m_lfit,h_20,limit_0/auto-orient,0/quality,q_50)
 `Hi`为计算出的地址，`H(key)`为哈希函数，`di`为增量。其中`di`的三种获取方式既是上面提到的开放地址法的三种分类（线性探测再散列、二次探测再散列、伪随机探测再散列）。
 
