--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -136,3 +136,4 @@ public class HashMap<K,V> extends AbstractMap<K,V> implements Map<K,V>, Cloneabl
 *[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
 *[【集合框架】JDK1.8源码分析之HashMap（一） http://www.cnblogs.com/leesf456/p/5242233.html](http://www.cnblogs.com/leesf456/p/5242233.html)*
 *[HashMap源码分析（JDK1.8）- 你该知道的都在这里了 http://blog.csdn.net/brycegao321/article/details/52527236](http://blog.csdn.net/brycegao321/article/details/52527236)*
+*[Java基础系列之(三) - HashMap深度分析 http://www.cnblogs.com/wuhuangdi/p/4175991.html](http://www.cnblogs.com/wuhuangdi/p/4175991.html)*
