--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -100,9 +100,7 @@ HashMap 类图
 类属性说明
 ```java
 public class HashMap<K,V> extends AbstractMap<K,V> implements Map<K,V>, Cloneable, Serializable {
-    // 序列号
-    private static final long serialVersionUID = 362498820763181265L;    
-    // 默认的初始容量是16
+    // 默认的初始容量是16，必须是2的指数倍
     static final int DEFAULT_INITIAL_CAPACITY = 1 << 4;   
     // 最大容量
     static final int MAXIMUM_CAPACITY = 1 << 30; 
@@ -128,12 +126,74 @@ public class HashMap<K,V> extends AbstractMap<K,V> implements Map<K,V>, Cloneabl
     final float loadFactor;
 }
 ```
+### 构造函数
+HashMap一共提供了四个构造函数。
+```java
+/**
+ * Constructs an empty <tt>HashMap</tt> with the default initial capacity
+ * (16) and the default load factor (0.75).
+ */
+public HashMap() {
+    this.loadFactor = DEFAULT_LOAD_FACTOR; // all other fields defaulted
+}
+```
+```java
+/**
+  * Constructs an empty <tt>HashMap</tt> with the specified initial
+  * capacity and the default load factor (0.75).
+  *
+  * @param  initialCapacity the initial capacity.
+  * @throws IllegalArgumentException if the initial capacity is negative.
+  */
+public HashMap(int initialCapacity) {
+    this(initialCapacity, DEFAULT_LOAD_FACTOR);
+}
+```
+```java
+/**
+  * Constructs an empty <tt>HashMap</tt> with the specified initial
+  * capacity and load factor.
+  *
+  * @param  initialCapacity the initial capacity
+  * @param  loadFactor      the load factor
+  * @throws IllegalArgumentException if the initial capacity is negative
+  *         or the load factor is nonpositive
+  */
+public HashMap(int initialCapacity, float loadFactor) {
+    if (initialCapacity < 0)
+        throw new IllegalArgumentException("Illegal initial capacity: " +
+                                            initialCapacity);
+    if (initialCapacity > MAXIMUM_CAPACITY)
+        initialCapacity = MAXIMUM_CAPACITY;
+    if (loadFactor <= 0 || Float.isNaN(loadFactor))
+        throw new IllegalArgumentException("Illegal load factor: " +
+                                            loadFactor);
+    this.loadFactor = loadFactor;
+    this.threshold = tableSizeFor(initialCapacity);
+}
+```
+这里着重看下`HashMap(int initialCapacity, float loadFactor)`函数中的`tableSizeFor(initialCapacity)`。
 
+```java
+/**
+  * Constructs a new <tt>HashMap</tt> with the same mappings as the
+  * specified <tt>Map</tt>.  The <tt>HashMap</tt> is created with
+  * default load factor (0.75) and an initial capacity sufficient to
+  * hold the mappings in the specified <tt>Map</tt>.
+  *
+  * @param   m the map whose mappings are to be placed in this map
+  * @throws  NullPointerException if the specified map is null
+  */
+public HashMap(Map<? extends K, ? extends V> m) {
+    this.loadFactor = DEFAULT_LOAD_FACTOR;
+    putMapEntries(m, false);
+}
+```
 
 
 ### 参考
-*[哈希冲突处理 http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
-*[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
-*[【集合框架】JDK1.8源码分析之HashMap（一） http://www.cnblogs.com/leesf456/p/5242233.html](http://www.cnblogs.com/leesf456/p/5242233.html)*
-*[HashMap源码分析（JDK1.8）- 你该知道的都在这里了 http://blog.csdn.net/brycegao321/article/details/52527236](http://blog.csdn.net/brycegao321/article/details/52527236)*
-*[Java基础系列之(三) - HashMap深度分析 http://www.cnblogs.com/wuhuangdi/p/4175991.html](http://www.cnblogs.com/wuhuangdi/p/4175991.html)*
+- *[哈希冲突处理 http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
+- *[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
+- *[【集合框架】JDK1.8源码分析之HashMap（一） http://www.cnblogs.com/leesf456/p/5242233.html](http://www.cnblogs.com/leesf456/p/5242233.html)*
+- *[HashMap源码分析（JDK1.8）- 你该知道的都在这里了 http://blog.csdn.net/brycegao321/article/details/52527236](http://blog.csdn.net/brycegao321/article/details/52527236)*
+- *[Java基础系列之(三) - HashMap深度分析 http://www.cnblogs.com/wuhuangdi/p/4175991.html](http://www.cnblogs.com/wuhuangdi/p/4175991.html)*
