--- a/source/_posts/20170712--HashMap-面试题摘录.md
+++ b/source/_posts/20170712--HashMap-面试题摘录.md
@@ -54,6 +54,10 @@ final Node<K,V> getNode(int hash, Object key) {
 当重新调整HashMap大小的时候，确实存在条件竞争，因为如果两个线程都发现HashMap需要重新调整大小了，它们会同时试着调整大小。在调整大小的过程中，存储在LinkedList中的元素的次序会反过来，因为移动到新的bucket位置的时候，HashMap并不会将元素放在LinkedList的尾部，而是放在头部，这是为了避免尾部遍历(tail traversing)。如果条件竞争发生了，那么就死循环了。这个时候，你可以质问面试官，为什么这么奇怪，要在多线程的环境下使用HashMap呢？
 #### ConcurrentHashMap和Hashtable的区别
 Hashtable和ConcurrentHashMap有什么分别呢？它们都可以用于多线程的环境，但是当Hashtable的大小增加到一定的时候，性能会急剧下降，因为迭代时需要被锁定很长的时间。因为ConcurrentHashMap引入了分割(segmentation)，不论它变得多么大，仅仅需要锁定map的某个部分，而其它的线程不需要等到迭代完成才能访问map。简而言之，在迭代的过程中，ConcurrentHashMap仅仅锁定map的某个部分，而Hashtable则会锁定整个map。
+#### HashMap不是线程安全的，你怎么理解线程安全。原理是什么？几种方式避免线程安全的问题。
+线程安全就是多个线程去访问的时候，会对对象造成不是预期的结果，一般要加锁才能线程安全。
+//TODO
 
 #### 参考
-*[http://www.cnblogs.com/zywu/p/5753736.html](http://www.cnblogs.com/zywu/p/5753736.html)*
+- *[http://www.cnblogs.com/zywu/p/5753736.html](http://www.cnblogs.com/zywu/p/5753736.html)*
+- *[Java基础系列之(三) - HashMap深度分析 http://www.cnblogs.com/wuhuangdi/p/4175991.html](http://www.cnblogs.com/wuhuangdi/p/4175991.html)*
