--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -126,7 +126,8 @@ public class HashMap<K,V> extends AbstractMap<K,V> implements Map<K,V>, Cloneabl
     final float loadFactor;
 }
 ```
-### 构造函数
+### 函数详解
+#### 构造函数
 HashMap一共提供了四个构造函数。
 ```java
 /**
@@ -187,7 +188,7 @@ public HashMap(Map<? extends K, ? extends V> m) {
     putMapEntries(m, false);
 }
 ```
-这里着重看下`HashMap(int initialCapacity, float loadFactor)`函数中的`tableSizeFor(initialCapacity)`。注释翻的意思就是**返回大于`cap`的最小二的幂数**，这个函数的目的就是通过无符号右移动操作先取到比最小幂小1的数（后面连续几个零的二进制的数）。至于为何在开始的时候减一是因为在假设`cap`已经是二的幂数了，这个时候就是得到`cap`2倍的幂，更好的解释参见*[HashMap源码注解 之 静态工具方法hash()、tableSizeFor()（四）](http://blog.csdn.net/fan2012huan/article/details/51097331)*。
+这里着重看下`HashMap(int initialCapacity, float loadFactor)`函数中的`tableSizeFor(initialCapacity)`。注释翻译过来的意思就是**返回大于`cap`的最小二的幂数**，这个函数的目的就是通过无符号右移动操作先取到比最小幂小1的数（后面连续几个零的二进制的数）。至于为何在开始的时候减一是因为在假设`cap`已经是二的幂数了，这个时候就是得到`cap`2倍的幂，更好的解释参见*[HashMap源码注解 之 静态工具方法hash()、tableSizeFor()（四）](http://blog.csdn.net/fan2012huan/article/details/51097331)*。
 ```java
 /**
  * Returns a power of two size for the given target capacity.
@@ -306,7 +307,92 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
     return null;
 }
 ```
-
+上面的源码中当`table`为`null`或长度为`0`时需要重新初始化表格`n = (tab = resize()).length;`，看下`resize`方法：
+```java
+/**
+ * Initializes or doubles table size.  If null, allocates in
+ * accord with initial capacity target held in field threshold.
+ * Otherwise, because we are using power-of-two expansion, the
+ * elements from each bin must either stay at same index, or move
+ * with a power of two offset in the new table.
+ *
+ * @return the table
+ */
+final Node<K,V>[] resize() {
+    Node<K,V>[] oldTab = table;
+    int oldCap = (oldTab == null) ? 0 : oldTab.length;
+    int oldThr = threshold;
+    int newCap, newThr = 0;
+    if (oldCap > 0) {
+        if (oldCap >= MAXIMUM_CAPACITY) {
+            threshold = Integer.MAX_VALUE;
+            return oldTab;
+        }
+        else if ((newCap = oldCap << 1) < MAXIMUM_CAPACITY &&
+                    oldCap >= DEFAULT_INITIAL_CAPACITY)
+            newThr = oldThr << 1; // double threshold
+    }
+    else if (oldThr > 0) // initial capacity was placed in threshold
+        newCap = oldThr;
+    else {               // zero initial threshold signifies using defaults
+        newCap = DEFAULT_INITIAL_CAPACITY;
+        newThr = (int)(DEFAULT_LOAD_FACTOR * DEFAULT_INITIAL_CAPACITY);
+    }
+    if (newThr == 0) {
+        float ft = (float)newCap * loadFactor;
+        newThr = (newCap < MAXIMUM_CAPACITY && ft < (float)MAXIMUM_CAPACITY ?
+                    (int)ft : Integer.MAX_VALUE);
+    }
+    threshold = newThr;
+    @SuppressWarnings({"rawtypes","unchecked"})
+        Node<K,V>[] newTab = (Node<K,V>[])new Node[newCap];
+    table = newTab;
+    if (oldTab != null) {
+        for (int j = 0; j < oldCap; ++j) {
+            Node<K,V> e;
+            if ((e = oldTab[j]) != null) {
+                oldTab[j] = null;
+                if (e.next == null)
+                    newTab[e.hash & (newCap - 1)] = e;
+                else if (e instanceof TreeNode)
+                    ((TreeNode<K,V>)e).split(this, newTab, j, oldCap);
+                else { // preserve order
+                    Node<K,V> loHead = null, loTail = null;
+                    Node<K,V> hiHead = null, hiTail = null;
+                    Node<K,V> next;
+                    do {
+                        next = e.next;
+                        if ((e.hash & oldCap) == 0) {
+                            if (loTail == null)
+                                loHead = e;
+                            else
+                                loTail.next = e;
+                            loTail = e;
+                        }
+                        else {
+                            if (hiTail == null)
+                                hiHead = e;
+                            else
+                                hiTail.next = e;
+                            hiTail = e;
+                        }
+                    } while ((e = next) != null);
+                    if (loTail != null) {
+                        loTail.next = null;
+                        newTab[j] = loHead;
+                    }
+                    if (hiTail != null) {
+                        hiTail.next = null;
+                        newTab[j + oldCap] = hiHead;
+                    }
+                }
+            }
+        }
+    }
+    return newTab;
+}
+```
+方法的文档说明就是说
 ### 参考
 - *[哈希冲突处理 http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
 - *[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
