--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -45,7 +45,7 @@ HashMap 基本就是哈希表，其底层实现就是围绕哈希表展开的，
 >5. 随机数法：选择一随机函数，取关键字的随机值作为散列地址，通常用于关键字长度不同的场合。
 >6. 除留余数法：取关键字被某个不大于散列表表长m的数p除后所得的余数为散列地址。即 H(key) = key MOD p,p<=m。不仅可以对关键字直接取模，也可在折叠、平方取中等运算之后取模。对p的选择很重要，一般取素数或m，若p选的不好，容易产生同义词。
 
-除留余数法最常用，也是Java`HashMap`使用的方法，有关哈希冲突参考另一篇笔记 [哈希冲突处理 http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)。
+除留余数法最常用，也是Java`HashMap`使用的方法，有关哈希冲突参考另一篇笔记 [哈希冲突处理 http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)。
 其中**链地址**的处理方法正式`HashMap`处理冲突的基本方法。
 
 下图是经典的hashtable结构,**JDK 1.8** 中链表也可以由红黑树代替。
@@ -192,7 +192,7 @@ public HashMap(Map<? extends K, ? extends V> m) {
 
 
 ### 参考
-- *[哈希冲突处理 http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.site/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
+- *[哈希冲突处理 http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
 - *[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
 - *[【集合框架】JDK1.8源码分析之HashMap（一） http://www.cnblogs.com/leesf456/p/5242233.html](http://www.cnblogs.com/leesf456/p/5242233.html)*
 - *[HashMap源码分析（JDK1.8）- 你该知道的都在这里了 http://blog.csdn.net/brycegao321/article/details/52527236](http://blog.csdn.net/brycegao321/article/details/52527236)*
