--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -27,8 +27,7 @@ tags:
 1. 哈希基本原理？（答：散列表、hash碰撞、链表、红黑树）
 2. hashmap查询的时间复杂度， 影响因素和原理？ （答：最好O（1），最差O（n）， 如果是红黑O（logn））
 3. resize如何实现的， 记住已经没有rehash了！！！（答：拉链entry根据高位bit散列到当前位置i和size+i位置）
-4. 为什么获取下标时用按位与&，而不是取模%？ （答：不只是&速度更快哦，  我觉得你能答上来便真正理解hashmap了）
-5. get put 的过程。
+4. get put 的过程。
 
 ### 数据结构
 HashMap 基本就是哈希表，其底层实现就是围绕哈希表展开的，源码阅读也是在理解了哈希表的前提下进行为上策。
@@ -50,7 +49,8 @@ HashMap 基本就是哈希表，其底层实现就是围绕哈希表展开的，
 
 下图是经典的hashtable结构,**JDK 1.8** 中链表也可以由红黑树代替。
 ![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/hashtable.jpg)
-
+**1.8**中的结构(参考：[http://www.cnblogs.com/leesf456/p/5242233.html](http://www.cnblogs.com/leesf456/p/5242233.html))
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/hashmap-1.8.png)
 ### HashMap 类总览
 首先看两段注释文档
 ```java
@@ -67,7 +67,7 @@ HashMap 基本就是哈希表，其底层实现就是围绕哈希表展开的，
  * tree bins may be delayed in the course of table methods.
  */
 ```
-其中` but when bins get too large, they are transformed into bins of TreeNodes`这句说明了当bin过大时就会采用红黑树进行存储。
+其中`but when bins get too large, they are transformed into bins of TreeNodes`这句说明了当bin过大时就会采用红黑树进行存储。
 ```java
 /**
  * The bin count threshold for using a tree rather than list for a
@@ -267,27 +267,27 @@ public V put(K key, V value) {
 final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
                 boolean evict) {
     Node<K,V>[] tab; Node<K,V> p; int n, i;
-    if ((tab = table) == null || (n = tab.length) == 0)
+    if ((tab = table) == null || (n = tab.length) == 0) //如果原来的table为空则resize
         n = (tab = resize()).length;
-    if ((p = tab[i = (n - 1) & hash]) == null)
+    if ((p = tab[i = (n - 1) & hash]) == null)      //对应的位置中没有值，则直接放进去
         tab[i] = newNode(hash, key, value, null);
     else {
         Node<K,V> e; K k;
         if (p.hash == hash &&
-            ((k = p.key) == key || (key != null && key.equals(k))))
+            ((k = p.key) == key || (key != null && key.equals(k)))) //如果hash值相同、key相同（equals判断）则进行更新操作
             e = p;
         else if (p instanceof TreeNode)
             e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value);
-        else {
+        else {              //hash冲突处理
             for (int binCount = 0; ; ++binCount) {
                 if ((e = p.next) == null) {
-                    p.next = newNode(hash, key, value, null);
-                    if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
+                    p.next = newNode(hash, key, value, null);   //如果为当前链表的最后一个元素则直接将新元素放到最后
+                    if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st    //超过转为黑红树的上限时转换为黑红树
                         treeifyBin(tab, hash);
                     break;
                 }
                 if (e.hash == hash &&
-                    ((k = e.key) == key || (key != null && key.equals(k))))
+                    ((k = e.key) == key || (key != null && key.equals(k)))) //链表中有hash值相同、key相同（equals判断）则进行更新操作
                     break;
                 p = e;
             }
@@ -307,15 +307,19 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
     return null;
 }
 ```
+这里取得对象在table中索引的代码就是`i = (n - 1) & hash`，这个实际上就是取模运算`n%hash`，这里为什么采用前一种方法，看一下说明
+> 这个方法非常巧妙，它通过h & (table.length -1)来得到该对象的保存位，而HashMap底层数组的长度总是2的n次方，这是HashMap在速度上的优化。当length总是2的n次方时，h& (length-1)运算等价于对length取模，也就是h%length，但是&比%具有更高的效率。
+> [https://zhuanlan.zhihu.com/p/21673805](https://zhuanlan.zhihu.com/p/21673805)  
+
 上面的源码中当`table`为`null`或长度为`0`时需要重新初始化表格`n = (tab = resize()).length;`，看下`resize`方法：
 ```java
 /**
  * Initializes or doubles table size.  If null, allocates in
- * accord with initial capacity target held in field threshold.
+ * accord with initial capacity target held in field threshold. 初始化或者翻倍table大小，当原始table为空时使用threshold中存储的值初始化table。
  * Otherwise, because we are using power-of-two expansion, the
  * elements from each bin must either stay at same index, or move
  * with a power of two offset in the new table.
- *
+ * 
  * @return the table
  */
 final Node<K,V>[] resize() {
@@ -324,17 +328,17 @@ final Node<K,V>[] resize() {
     int oldThr = threshold;
     int newCap, newThr = 0;
     if (oldCap > 0) {
-        if (oldCap >= MAXIMUM_CAPACITY) {
+        if (oldCap >= MAXIMUM_CAPACITY) {   // 超过最大值就不再扩充了
             threshold = Integer.MAX_VALUE;
             return oldTab;
         }
-        else if ((newCap = oldCap << 1) < MAXIMUM_CAPACITY &&
+        else if ((newCap = oldCap << 1) < MAXIMUM_CAPACITY &&   //容量扩展到原来的两倍
                     oldCap >= DEFAULT_INITIAL_CAPACITY)
-            newThr = oldThr << 1; // double threshold
+            newThr = oldThr << 1; // double threshold       // 临界值扩展到原来的两倍
     }
-    else if (oldThr > 0) // initial capacity was placed in threshold
+    else if (oldThr > 0) //当原来的table长度为0时，并且指定了初始容量（HashMap(int initialCapacity, float loadFactor)），进行到这里
         newCap = oldThr;
-    else {               // zero initial threshold signifies using defaults
+    else {               // 没有指定初始容量时采用默认
         newCap = DEFAULT_INITIAL_CAPACITY;
         newThr = (int)(DEFAULT_LOAD_FACTOR * DEFAULT_INITIAL_CAPACITY);
     }
@@ -348,7 +352,7 @@ final Node<K,V>[] resize() {
         Node<K,V>[] newTab = (Node<K,V>[])new Node[newCap];
     table = newTab;
     if (oldTab != null) {
-        for (int j = 0; j < oldCap; ++j) {
+        for (int j = 0; j < oldCap; ++j) {  
             Node<K,V> e;
             if ((e = oldTab[j]) != null) {
                 oldTab[j] = null;
@@ -362,14 +366,14 @@ final Node<K,V>[] resize() {
                     Node<K,V> next;
                     do {
                         next = e.next;
-                        if ((e.hash & oldCap) == 0) {
+                        if ((e.hash & oldCap) == 0) {   //索引为低位的元素
                             if (loTail == null)
                                 loHead = e;
                             else
                                 loTail.next = e;
                             loTail = e;
                         }
-                        else {
+                        else {                          //索引为高位的元素
                             if (hiTail == null)
                                 hiHead = e;
                             else
@@ -392,7 +396,18 @@ final Node<K,V>[] resize() {
     return newTab;
 }
 ```
-方法的文档说明就是说
+方法的文档说明中有这样一句话
+>Otherwise, because we are using power-of-two expansion, the elements from each bin must either stay at same index, or move  with a power of two offset in the new table.  
+
+是说，因为使用的是2的幂数作为扩展的方式，这里就出现了一种情况**旧table中的元素对应（重新进行hash后）到新table中的索引位置必然在原位置或2的幂的位移（移动旧table的长度）**  
+
+>经过观测可以发现，我们使用的是2次幂的扩展(指长度扩为原来2倍)，所以，元素的位置要么是在原位置，要么是在原位置再移动2次幂的位置。看下图可以明白这句话的意思，n为table的长度，图（a）表示扩容前的key1和key2两种key确定索引位置的示例，图（b）表示扩容后key1和key2两种key确定索引位置的示例，其中hash1是key1对应的哈希与高位运算结果。
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/resize-offset.jpg)
+元素在重新计算hash之后，因为n变为2倍，那么n-1的mask范围在高位多1bit(红色)，因此新的index就会发生这样的变化：
+![](https://pic2.zhimg.com/b2cb057773e3d67976c535d6ef547d51_b.png)
+因此，我们在扩充HashMap的时候，不需要像JDK1.7的实现那样重新计算hash，只需要看看原来的hash值新增的那个bit是1还是0就好了，是0的话索引没变，是1的话索引变成“原索引+oldCap”。
+[https://zhuanlan.zhihu.com/p/21673805](https://zhuanlan.zhihu.com/p/21673805)  
+
 ### 参考
 - *[哈希冲突处理 http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
 - *[HashMap面试问题http://blog.csdn.net/song19890528/article/details/16891015](http://blog.csdn.net/song19890528/article/details/16891015)*
@@ -400,3 +415,4 @@ final Node<K,V>[] resize() {
 - *[HashMap源码分析（JDK1.8）- 你该知道的都在这里了 http://blog.csdn.net/brycegao321/article/details/52527236](http://blog.csdn.net/brycegao321/article/details/52527236)*
 - *[Java基础系列之(三) - HashMap深度分析 http://www.cnblogs.com/wuhuangdi/p/4175991.html](http://www.cnblogs.com/wuhuangdi/p/4175991.html)*
 - *[HashMap源码注解 之 静态工具方法hash()、tableSizeFor()（四）](http://blog.csdn.net/fan2012huan/article/details/51097331)*
+- *[Java8系列之重新认识HashMap](https://zhuanlan.zhihu.com/p/21673805)*
