--- a/source/_posts/20170712--HashMap-源码阅读.md
+++ b/source/_posts/20170712--HashMap-源码阅读.md
@@ -399,7 +399,7 @@ final Node<K,V>[] resize() {
 方法的文档说明中有这样一句话
 >Otherwise, because we are using power-of-two expansion, the elements from each bin must either stay at same index, or move  with a power of two offset in the new table.  
 
-是说，因为使用的是2的幂数作为扩展的方式，这里就出现了一种情况**旧table中的元素对应（重新进行hash后）到新table中的索引位置必然在原位置或2的幂的位移（移动旧table的长度）**  
+是说，因为使用的是2的幂数作为扩展的方式，这里就出现了一种情况 **旧table中的元素对应（重新进行hash后）到新table中的索引位置必然在原位置或2的幂的位移（移动旧table的长度）**  
 
 >经过观测可以发现，我们使用的是2次幂的扩展(指长度扩为原来2倍)，所以，元素的位置要么是在原位置，要么是在原位置再移动2次幂的位置。看下图可以明白这句话的意思，n为table的长度，图（a）表示扩容前的key1和key2两种key确定索引位置的示例，图（b）表示扩容后key1和key2两种key确定索引位置的示例，其中hash1是key1对应的哈希与高位运算结果。
 ![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/resize-offset.jpg)
@@ -407,6 +407,10 @@ final Node<K,V>[] resize() {
 ![](https://pic2.zhimg.com/b2cb057773e3d67976c535d6ef547d51_b.png)
 因此，我们在扩充HashMap的时候，不需要像JDK1.7的实现那样重新计算hash，只需要看看原来的hash值新增的那个bit是1还是0就好了，是0的话索引没变，是1的话索引变成“原索引+oldCap”。
 [https://zhuanlan.zhihu.com/p/21673805](https://zhuanlan.zhihu.com/p/21673805)  
+
+>put的总体流程可参考下图
+![](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/hashmap-put.jpg)
+[http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/hashmap-put.jpg](http://idiary.oss-cn-zhangjiakou.aliyuncs.com/images/2017-07-12--HashMap-%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/hashmap-put.jpg)
 
 ### 参考
 - *[哈希冲突处理 http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/](http://www.idiary.cc/2017/07/11/Hash-%E5%86%B2%E7%AA%81%E5%A4%84%E7%90%86/)*
